--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
   "name": "recipeapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zsxam/recipeApp.git"
-  },
-  "keywords": [
-    "recipe"
-  ],
-  "author": "Zsxam",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Zsxam/recipeApp/issues"
-  },
-  "homepage": "https://github.com/Zsxam/recipeApp#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
